crates/synth-parser/tests/snapshots/fixtures__every_positive_design_parses_clean@empty_after_brace.snap
---
source: crates/synth-parser/tests/fixtures.rs
expression: ast
---
{
  "imports": [],
  "board": {
    "name": "empty_after_brace",
    "statements": [],
    "span": {
      "byte_start": 0,
      "byte_end": 29
    }
  },
  "span": {
    "byte_start": 0,
    "byte_end": 29
  }
}
