crates/synth-parser/tests/snapshots/fixtures__every_positive_design_parses_clean@four_components.snap
---
source: crates/synth-parser/tests/fixtures.rs
expression: ast
---
{
  "imports": [],
  "board": {
    "name": "four_components",
    "statements": [
      {
        "stmt": "layers",
        "count": 4,
        "span": {
          "byte_start": 28,
          "byte_end": 36
        }
      },
      {
        "stmt": "component",
        "refdes": "U1",
        "kind": "mcu",
        "part": "rp2350",
        "span": {
          "byte_start": 39,
          "byte_end": 65
        }
      },
      {
        "stmt": "component",
        "refdes": "U2",
        "kind": "secure_element",
        "part": "atecc608",
        "span": {
          "byte_start": 68,
          "byte_end": 107
        }
      },
      {
        "stmt": "component",
        "refdes": "C1",
        "kind": "capacitor",
        "part": "c_generic_0402",
        "span": {
          "byte_start": 110,
          "byte_end": 150
        }
      },
      {
        "stmt": "component",
        "refdes": "C2",
        "kind": "capacitor",
        "part": "c_generic_0402",
        "span": {
          "byte_start": 153,
          "byte_end": 193
        }
      }
    ],
    "span": {
      "byte_start": 0,
      "byte_end": 195
    }
  },
  "span": {
    "byte_start": 0,
    "byte_end": 195
  }
}
