crates/synth-parser/tests/snapshots/fixtures__every_positive_design_parses_clean@just_imports.snap
---
source: crates/synth-parser/tests/fixtures.rs
expression: ast
---
{
  "imports": [
    {
      "path": "stdlib.synth",
      "span": {
        "byte_start": 0,
        "byte_end": 21
      }
    },
    {
      "path": "common.synth",
      "span": {
        "byte_start": 22,
        "byte_end": 43
      }
    }
  ],
  "board": {
    "name": "just_imports",
    "statements": [
      {
        "stmt": "layers",
        "count": 2,
        "span": {
          "byte_start": 69,
          "byte_end": 77
        }
      }
    ],
    "span": {
      "byte_start": 44,
      "byte_end": 79
    }
  },
  "span": {
    "byte_start": 0,
    "byte_end": 79
  }
}
