crates/synth-parser/tests/snapshots/fixtures__every_positive_design_parses_clean@keepout_decimal.snap
---
source: crates/synth-parser/tests/fixtures.rs
expression: ast
---
{
  "imports": [],
  "board": {
    "name": "keepout_decimal",
    "statements": [
      {
        "stmt": "layers",
        "count": 4,
        "span": {
          "byte_start": 28,
          "byte_end": 36
        }
      },
      {
        "stmt": "keepout",
        "name": "antenna",
        "attrs": [
          {
            "kind": "radius",
            "literal": "0.5",
            "unit": "mm",
            "span": {
              "byte_start": 68,
              "byte_end": 73
            }
          }
        ],
        "span": {
          "byte_start": 39,
          "byte_end": 77
        }
      }
    ],
    "span": {
      "byte_start": 0,
      "byte_end": 79
    }
  },
  "span": {
    "byte_start": 0,
    "byte_end": 79
  }
}
